error.txt
haris@haris-desktop:~/celestial-nav$ rm -rf build
haris@haris-desktop:~/celestial-nav$ mkdir build
haris@haris-desktop:~/celestial-nav$ cd build
haris@haris-desktop:~/celestial-nav/build$ cmake ..
-- The C compiler identification is GNU 13.2.0
c-- The CXX compiler identification is GNU 13.2.0
-- Detecting C compiler ABI info
ma-- Detecting C compiler ABI info - done
k-- Check for working C compiler: /usr/bin/cc - skipped
-- Detecting C compile features
-- Detecting C compile features - done
-- Detecting CXX compiler ABI info
e --- Detecting CXX compiler ABI info - done
-- Check for working CXX compiler: /usr/bin/c++ - skipped
-- Detecting CXX compile features
-- Detecting CXX compile features - done
-- Found OpenCV: /usr (found version "4.6.0") 
-- Found Boost: /usr/lib/aarch64-linux-gnu/cmake/Boost-1.83.0/BoostConfig.cmake (found version "1.83.0")  
-- Found PkgConfig: /usr/bin/pkg-config (found version "1.8.1") 
-- Checking for module 'libcamera'
--   Found libcamera, version 0.2.0
-- Configuring done (1.1s)
-- Generating done (0.0s)
-- Build files have been written to: /home/haris/celestial-nav/build
-haris@haris-desktop:~/celestial-nav/build$ cmake --build .
[ 12%] Building CXX object CMakeFiles/celestial_nav.dir/src/main.cpp.o
In file included from /home/haris/celestial-nav/src/star_detection.h:2,
                 from /home/haris/celestial-nav/src/user_interface.h:4,
                 from /home/haris/celestial-nav/src/main.cpp:2:
/home/haris/celestial-nav/src/star_matching.h:22:27: error: ‘Star’ was not declared in this scope
   22 |     std::vector<std::pair<Star, ReferenceStarData>> matchStars(const std::vector<Star> &detectedStars);
      |                           ^~~~
/home/haris/celestial-nav/src/star_matching.h:22:33: error: template argument 1 is invalid
   22 |     std::vector<std::pair<Star, ReferenceStarData>> matchStars(const std::vector<Star> &detectedStars);
      |                                 ^~~~~~~~~~~~~~~~~
/home/haris/celestial-nav/src/star_matching.h:22:50: error: template argument 1 is invalid
   22 |     std::vector<std::pair<Star, ReferenceStarData>> matchStars(const std::vector<Star> &detectedStars);
      |                                                  ^~
/home/haris/celestial-nav/src/star_matching.h:22:50: error: template argument 2 is invalid
/home/haris/celestial-nav/src/star_matching.h:22:82: error: ‘Star’ was not declared in this scope
   22 |     std::vector<std::pair<Star, ReferenceStarData>> matchStars(const std::vector<Star> &detectedStars);
      |                                                                                  ^~~~
/home/haris/celestial-nav/src/star_matching.h:22:86: error: template argument 1 is invalid
   22 |     std::vector<std::pair<Star, ReferenceStarData>> matchStars(const std::vector<Star> &detectedStars);
      |                                                                                      ^
/home/haris/celestial-nav/src/star_matching.h:22:86: error: template argument 2 is invalid
/home/haris/celestial-nav/src/star_matching.h:29:55: error: ‘Star’ was not declared in this scope
   29 |     Eigen::MatrixXd geometricVoting(const std::vector<Star> &detectedStars);
      |                                                       ^~~~
/home/haris/celestial-nav/src/star_matching.h:29:59: error: template argument 1 is invalid
   29 |     Eigen::MatrixXd geometricVoting(const std::vector<Star> &detectedStars);
      |                                                           ^
/home/haris/celestial-nav/src/star_matching.h:29:59: error: template argument 2 is invalid
/home/haris/celestial-nav/src/star_matching.h:31:27: error: ‘Star’ was not declared in this scope
   31 |     std::vector<std::pair<Star, ReferenceStarData>> rejectOutliers(const std::vector<std::pair<Star, ReferenceStarData>> &matches);
      |                           ^~~~
/home/haris/celestial-nav/src/star_matching.h:31:33: error: template argument 1 is invalid
   31 |     std::vector<std::pair<Star, ReferenceStarData>> rejectOutliers(const std::vector<std::pair<Star, ReferenceStarData>> &matches);
      |                                 ^~~~~~~~~~~~~~~~~
/home/haris/celestial-nav/src/star_matching.h:31:50: error: template argument 1 is invalid
   31 |     std::vector<std::pair<Star, ReferenceStarData>> rejectOutliers(const std::vector<std::pair<Star, ReferenceStarData>> &matches);
      |                                                  ^~
/home/haris/celestial-nav/src/star_matching.h:31:50: error: template argument 2 is invalid
/home/haris/celestial-nav/src/star_matching.h:31:96: error: ‘Star’ was not declared in this scope
   31 |     std::vector<std::pair<Star, ReferenceStarData>> rejectOutliers(const std::vector<std::pair<Star, ReferenceStarData>> &matches);
      |                                                                                                ^~~~
/home/haris/celestial-nav/src/star_matching.h:31:102: error: template argument 1 is invalid
   31 |     std::vector<std::pair<Star, ReferenceStarData>> rejectOutliers(const std::vector<std::pair<Star, ReferenceStarData>> &matches);
      |                                                                                                      ^~~~~~~~~~~~~~~~~
/home/haris/celestial-nav/src/star_matching.h:31:119: error: template argument 1 is invalid
   31 |     std::vector<std::pair<Star, ReferenceStarData>> rejectOutliers(const std::vector<std::pair<Star, ReferenceStarData>> &matches);
      |                                                                                                                       ^~
/home/haris/celestial-nav/src/star_matching.h:31:119: error: template argument 2 is invalid
gmake[2]: *** [CMakeFiles/celestial_nav.dir/build.make:76: CMakeFiles/celestial_nav.dir/src/main.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:83: CMakeFiles/celestial_nav.dir/all] Error 2
gmake: *** [Makefile:91: all] Error 2
haris@haris-desktop:~/celestial-nav/build$ 